--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "gen": "webpack --config scripts/webpack/webpack.config.js",
     "build:production": "webpack -p --config scripts/webpack/webpack.config.js",
     "storybook:static": "build-storybook -c .storybook -o docs",
-    "compile:css": "./node_modules/.bin/postcss -c postcss.config.json -d lib src/components/**/*.css",
+    "compile:css": "./node_modules/.bin/postcss -r -d lib/**/*.css -c postcss.config.js",
     "compile:js": "./node_modules/.bin/babel src/components --out-dir lib --copy-files --ignore __stories__",
-    "compile": "npm run compile:js",
+    "compile": "npm run compile:js && npm run compile:css",
     "build": "npm run compile && cp {package.json,README.md} lib",
     "dist": "cd lib && npm publish"
   },
