--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lystable-ui-library",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "A library of React components",
   "repository": {
     "type": "git",
@@ -17,47 +17,57 @@
     "compile:js": "./node_modules/.bin/babel src/components --out-dir lib --copy-files --ignore __stories__",
     "compile": "npm run compile:js && npm run compile:css",
     "build": "npm run compile && cp {package.json,README.md} lib",
-    "dist": "cd lib && npm publish"
+    "dist": "cd lib && npm publish",
+    "coverage": "rm -rf coverage/ && NODE_ENV=test NODE_PATH=./src:./src/ babel-node node_modules/.bin/babel-istanbul cover _mocha --report lcovonly -- -R spec $npm_package_options_mocha --timeout 8000"
   },
   "author": "Lystable",
   "license": "ISC",
   "devDependencies": {
-    "react": "^15.5.4",
-    "react-addons-css-transition-group": "^15.5.2",
-    "react-dom": "^15.5.4",
-    "react-hotkeys": "^0.9.0",
-    "react-intl": "^2.2.3",
-    "react-pure-render": "^1.0.2",
-    "lodash": "^4.17.4",
-    "prop-types": "^15.5.8",
-    "classnames": "^2.2.5",
     "@kadira/react-storybook-addon-info": "^3.4.0",
     "@kadira/storybook": "^2.35.3",
     "@kadira/storybook-addon-options": "^1.0.2",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
     "babel-eslint": "^7.2.3",
+    "babel-istanbul": "^0.12.2",
     "babel-loader": "^7.0.0",
     "babel-plugin-react-transform": "^2.0.2",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "classnames": "^2.2.5",
     "css-loader": "^0.28.0",
+    "enzyme": "^2.8.2",
+    "expect": "^1.20.2",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
     "getstorybook": "^1.7.0",
+    "lodash": "^4.17.4",
+    "mocha": "^3.3.0",
     "postcss-cli": "^3.2.0",
     "postcss-css-variables": "^0.7.0",
     "postcss-import": "^9.1.0",
     "postcss-loader": "^1.3.3",
+    "prop-types": "^15.5.8",
+    "proxyquire": "^1.7.11",
     "qs": "^6.4.0",
+    "react": "^15.5.4",
+    "react-addons-css-transition-group": "^15.5.2",
+    "react-dom": "^15.5.4",
+    "react-hotkeys": "^0.9.0",
+    "react-intl": "^2.2.3",
+    "react-pure-render": "^1.0.2",
     "react-storybook-addon-add-stories-group": "^0.1.0",
     "style-loader": "^0.16.1",
     "webpack": "^2.4.1"
   },
   "babel": {
-    "presets": ["es2015", "stage-2", "react"],
+    "presets": [
+      "es2015",
+      "stage-2",
+      "react"
+    ],
     "ignore": [
       "__stories__"
     ]
