--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "lystable-ui-library",
-  "version": "0.0.7",
+  "name": "lystable-ui",
+  "version": "0.0.8",
   "description": "A library of React components",
   "repository": {
     "type": "git",
@@ -18,7 +18,7 @@
     "compile": "npm run compile:js && npm run compile:css",
     "build": "npm run compile && cp {package.json,README.md} lib",
     "dist": "cd lib && npm publish",
-    "coverage": "rm -rf coverage/ && NODE_ENV=test NODE_PATH=./src:./src/ babel-node node_modules/.bin/babel-istanbul cover _mocha --report lcovonly -- -R spec $npm_package_options_mocha --timeout 8000"
+    "coverage": "rm -rf coverage/ && babel-node node_modules/.bin/babel-istanbul cover _mocha --report lcovonly -- -R spec $npm_package_options_mocha --timeout 8000"
   },
   "author": "Lystable",
   "license": "ISC",
