Set modules option

--- a/package.json
+++ b/package.json
@@ -64,7 +64,11 @@
   },
   "babel": {
     "presets": [
-      "es2015",
+      [
+        "es2015", {
+          "modules": false
+        }
+      ],
       "stage-2",
       "react"
     ],
