--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "qs": "^6.4.0",
     "react": "^15.5.4",
     "react-addons-css-transition-group": "^15.5.2",
+    "react-addons-test-utils": "^15.5.1",
     "react-dom": "^15.5.4",
     "react-hotkeys": "^0.9.0",
     "react-intl": "^2.2.3",
