--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "postcss-css-variables": "^0.7.0",
     "postcss-import": "^9.1.0",
     "postcss-loader": "^1.3.3",
+    "prettier": "^1.3.1",
     "prop-types": "^15.5.8",
     "proxyquire": "^1.7.11",
     "qs": "^6.4.0",
