--- a/package.json
+++ b/package.json
@@ -11,21 +11,15 @@
   },
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "storybook": "start-storybook -p 6006",
-    "gen": "webpack --config scripts/webpack/webpack.config.js",
-    "build:production": "webpack -p --config scripts/webpack/webpack.config.js",
-    "storybook:static": "build-storybook -c .storybook -o docs",
+    "storybook:start": "start-storybook -p 6006",
+    "storybook:build": "build-storybook -c .storybook -o docs",
     "compile:css": "./node_modules/.bin/postcss -r -d lib/**/*.css -c postcss.config.js",
     "compile:js": "./node_modules/.bin/babel src/components --out-dir lib --copy-files --ignore __stories__",
     "compile": "npm run compile:js && npm run compile:css",
-    "build": "npm run compile && cp {package.json,README.md} lib",
-    "dist": "cd lib && npm publish",
-    "coverage": "rm -rf coverage/ && NODE_ENV=test NODE_PATH=./src:./src/components babel-node node_modules/.bin/babel-istanbul cover _mocha -- -R spec $npm_package_options_mocha --timeout 8000",
-    "styleguide": "./node_modules/.bin/styleguidist server",
-    "styleguide:build": "./node_modules/.bin/styleguidist build"
+    "prepublish": "rimraf lib && npm run compile && cp {package.json,README.md} lib",
+    "test:coverage": "rm -rf coverage/ && NODE_ENV=test NODE_PATH=./src:./src/components babel-node node_modules/.bin/babel-istanbul cover _mocha -- -R spec $npm_package_options_mocha --timeout 8000"
   },
-  "author": "Lystable",
+  "author": "The Lystable Team",
   "license": "ISC",
   "devDependencies": {
     "@kadira/react-storybook-addon-info": "^3.4.0",
@@ -40,10 +34,18 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
     "classnames": "^2.2.5",
     "css-loader": "^0.28.0",
     "enzyme": "^2.8.2",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-config-lystable": "^6.0.0",
+    "eslint-config-prettier": "^2.0.0",
+    "eslint-plugin-flowtype": "^2.32.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^5.0.1",
+    "eslint-plugin-prettier": "^2.0.1",
+    "eslint-plugin-react": "^7.0.0",
     "expect": "^1.20.2",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
@@ -68,6 +70,7 @@
     "react-pure-render": "^1.0.2",
     "react-storybook-addon-add-stories-group": "^0.1.0",
     "react-styleguidist": "^5.2.0",
+    "rimraf": "^2.6.1",
     "style-loader": "^0.16.1",
     "webpack": "^2.5.1"
   },
