--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-loader": "^7.0.0",
     "babel-plugin-react-transform": "^2.0.2",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-plugin-transform-builtin-extend": "1.1.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "6.22.0",
