--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "lystable-ui",
-  "version": "0.0.16",
+  "name": "@kalo/ui",
+  "version": "0.0.18",
   "description": "A library of React components",
   "repository": {
     "type": "git",
@@ -20,7 +20,7 @@
     "generate": "rimraf lib && rsync -av --exclude='__tests__' --exclude='__stories__' src/components/ lib && cp {package.json,README.md} lib",
     "test:coverage": "rm -rf coverage/ && NODE_ENV=test NODE_PATH=./src:./src/components babel-node node_modules/.bin/babel-istanbul cover _mocha -- -R spec $npm_package_options_mocha --timeout 8000"
   },
-  "author": "The Lystable Team",
+  "author": "The Kalo Team",
   "license": "ISC",
   "devDependencies": {
     "@kadira/react-storybook-addon-info": "^3.4.0",
