--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kalo/ui",
-  "version": "0.0.18",
+  "version": "0.0.20",
   "description": "A library of React components",
   "repository": {
     "type": "git",
@@ -17,10 +17,9 @@
     "compile:css": "./node_modules/.bin/postcss -r -d lib/**/*.css -c postcss.config.js",
     "compile:js": "./node_modules/.bin/babel src/components --out-dir lib --copy-files --ignore __tests__,__stories__",
     "compile": "npm run compile:js && npm run compile:css",
-    "generate": "rimraf lib && rsync -av --exclude='__tests__' --exclude='__stories__' src/components/ lib && cp {package.json,README.md} lib",
-    "test:coverage": "rm -rf coverage/ && NODE_ENV=test NODE_PATH=./src:./src/components babel-node node_modules/.bin/babel-istanbul cover _mocha -- -R spec $npm_package_options_mocha --timeout 8000"
+    "test:coverage": "rm -rf coverage/ && NODE_ENV=test NODE_PATH=./src:./src/components babel-node node_modules/.bin/babel-istanbul cover _mocha -- -R spec $npm_package_options_mocha --timeout 8000",
+    "dist": "rimraf lib && npm run compile && cp {package.json,README.md} lib"
   },
-  "prepublish": "npm run compile",
   "author": "The Kalo Team",
   "license": "ISC",
   "devDependencies": {
