--- a/package.json
+++ b/package.json
@@ -18,7 +18,13 @@
     "compile:js": "./node_modules/.bin/babel src/components --out-dir lib --copy-files --ignore __tests__,__stories__",
     "compile": "npm run compile:js && npm run compile:css",
     "test:coverage": "rm -rf coverage/ && NODE_ENV=test NODE_PATH=./src:./src/components babel-node node_modules/.bin/babel-istanbul cover _mocha -- -R spec $npm_package_options_mocha --timeout 8000",
-    "dist": "rimraf lib && npm run compile && cp {package.json,README.md} lib"
+    "dist": "rimraf lib && npm run compile && cp {package.json,README.md} lib",
+    "precommit": "lint-staged"
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint"
+    ]
   },
   "author": "The Kalo Team",
   "license": "ISC",
@@ -32,8 +38,8 @@
     "babel-istanbul": "^0.8.0",
     "babel-loader": "^7.0.0",
     "babel-plugin-react-transform": "^2.0.2",
-    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-plugin-transform-builtin-extend": "1.1.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
@@ -53,7 +59,9 @@
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
     "getstorybook": "^1.7.0",
+    "husky": "^0.13.3",
     "jsdom": "7.2.2",
+    "lint-staged": "^3.4.2",
     "lodash": "^4.17.4",
     "mocha": "^3.3.0",
     "postcss-cli": "^3.2.0",
