--- a/.eslintrc
+++ b/.eslintrc
@@ -29,7 +29,11 @@
     "document": true,
   },
   "rules": {
-    "prettier/prettier": 2,
+    "prettier/prettier": [2, {
+      "singleQuote": true,
+      "trailingComma": "all",
+      "bracketSpacing": false,
+    }],
     "comma-dangle": [2, "always-multiline"],
     "import/no-duplicates": 2,
     "import/first": 0,
