--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "main": "lib/index.js",
   "scripts": {
+    "start": "start-storybook -p 80",
     "storybook": "npm run storybook:start",
     "storybook:start": "start-storybook -p 6006",
     "storybook:build": "build-storybook -c .storybook -o docs",
