--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "expect": "^1.20.2",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
+    "flow-bin": "^0.47.0",
     "husky": "^0.13.3",
     "jsdom": "7.2.2",
     "lint-staged": "^3.4.2",
