--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "compile:js": "./node_modules/.bin/babel src/components --out-dir lib --copy-files --ignore __tests__,__stories__",
     "compile": "npm run compile:js && npm run compile:css",
     "test:coverage": "rm -rf coverage/ && NODE_ENV=test NODE_PATH=./src:./src/components babel-node node_modules/.bin/babel-istanbul cover _mocha -- -R spec $npm_package_options_mocha --timeout 8000",
+    "test:typecheck": "flow check",
     "dist": "rimraf lib && npm run compile && cp {package.json,README.md} lib",
     "precommit": "lint-staged"
   },
