--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A library of React components",
   "repository": {
     "type": "git",
-    "url": "https://github.com/lystable/ui-library"
+    "url": "https://github.com/kalohq/ui"
   },
   "options": {
     "mocha": "--require src/utils/test/require-hooks --require src/utils/test/init-dom src/**/__tests__/*.{js,jsx}"
