--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "babel-eslint": "^7.2.3",
     "babel-istanbul": "^0.8.0",
     "babel-loader": "^7.0.0",
+    "babel-plugin-lodash": "^3.2.11",
     "babel-plugin-react-transform": "^2.0.2",
     "babel-plugin-transform-builtin-extend": "1.1.0",
     "babel-plugin-transform-runtime": "^6.23.0",
