--- a/package.json
+++ b/package.json
@@ -30,6 +30,11 @@
   "author": "The Kalo Team",
   "license": "ISC",
   "devDependencies": {
+    "@kalo/eslint-config": "6.0.0",
+    "@storybook/addon-info": "3.0.0",
+    "@storybook/addon-options": "3.0.0",
+    "@storybook/cli": "3.0.0",
+    "@storybook/react": "3.0.0",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
     "babel-eslint": "^7.2.3",
@@ -56,6 +61,7 @@
     "expect": "^1.20.2",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
+    "flow-bin": "^0.49.1",
     "husky": "^0.13.3",
     "jsdom": "7.2.2",
     "lint-staged": "^3.4.2",
@@ -80,12 +86,7 @@
     "react-styleguidist": "^5.2.0",
     "rimraf": "^2.6.1",
     "style-loader": "^0.16.1",
-    "webpack": "^2.5.1",
-    "@kalo/eslint-config": "6.0.0",
-    "@storybook/react": "3.0.0",
-    "@storybook/cli": "3.0.0",
-    "@storybook/addon-options": "3.0.0",
-    "@storybook/addon-info": "3.0.0"
+    "webpack": "^2.5.1"
   },
   "babel": {
     "presets": [
