--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "main": "lib/index.js",
   "scripts": {
-    "start": "npm run storybook:start",
+    "start": "npm run storybook:build && cd docs && now --static",
     "storybook": "npm run storybook:start",
     "storybook:start": "start-storybook -p 6006",
     "storybook:build": "build-storybook -c .storybook -o docs",
