--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kalo/ui",
-  "version": "0.2.3",
+  "version": "0.3.0",
   "description": "A library of React components",
   "repository": {
     "type": "git",
@@ -24,7 +24,9 @@
     "precommit": "lint-staged"
   },
   "lint-staged": {
-    "*.js": ["eslint"]
+    "*.js": [
+      "eslint"
+    ]
   },
   "author": "The Kalo Team",
   "license": "ISC",
@@ -101,7 +103,13 @@
     "react-pure-render": "^1.0.2"
   },
   "babel": {
-    "presets": ["es2015", "stage-2", "react"],
-    "ignore": ["__stories__"]
+    "presets": [
+      "es2015",
+      "stage-2",
+      "react"
+    ],
+    "ignore": [
+      "__stories__"
+    ]
   }
 }
