--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "copy-flow":
       "flow-copy-source src/components lib --ignore '{index.js,**/__tests__/*,**/__stories__/*}'",
     "typecheck": "flow",
+    "lint": "eslint src",
     "precommit": "lint-staged"
   },
   "lint-staged": {
@@ -40,71 +41,71 @@
     "@storybook/addon-options": "3.0.0",
     "@storybook/cli": "3.0.0",
     "@storybook/react": "3.0.0",
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.24.1",
-    "babel-eslint": "^7.2.3",
-    "babel-istanbul": "^0.8.0",
-    "babel-loader": "^7.0.0",
-    "babel-plugin-lodash": "^3.2.11",
-    "babel-plugin-react-transform": "^2.0.2",
+    "babel-cli": "6.24.1",
+    "babel-core": "6.24.1",
+    "babel-eslint": "7.2.3",
+    "babel-istanbul": "0.8.0",
+    "babel-loader": "7.0.0",
+    "babel-plugin-lodash": "3.2.11",
+    "babel-plugin-react-transform": "2.0.2",
     "babel-plugin-transform-builtin-extend": "1.1.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "classnames": "^2.2.5",
-    "css-loader": "^0.28.0",
-    "enzyme": "^2.8.2",
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^14.1.0",
-    "eslint-config-prettier": "^2.2.0",
-    "eslint-plugin-flowtype": "^2.32.1",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^5.0.1",
-    "eslint-plugin-prettier": "^2.1.2",
-    "eslint-plugin-react": "^7.0.0",
-    "expect": "^1.20.2",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "file-loader": "^0.11.1",
+    "babel-plugin-transform-runtime": "6.23.0",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-react": "6.24.1",
+    "babel-preset-stage-2": "6.24.1",
+    "classnames": "2.2.5",
+    "css-loader": "0.28.0",
+    "enzyme": "2.8.2",
+    "eslint": "3.19.0",
+    "eslint-config-airbnb": "14.1.0",
+    "eslint-config-prettier": "2.4.0",
+    "eslint-plugin-flowtype": "2.32.1",
+    "eslint-plugin-import": "2.2.0",
+    "eslint-plugin-jsx-a11y": "5.0.1",
+    "eslint-plugin-prettier": "2.0.1",
+    "eslint-plugin-react": "7.0.0",
+    "expect": "1.20.2",
+    "extract-text-webpack-plugin": "2.1.0",
+    "file-loader": "0.11.1",
     "flow-bin": "0.53.0",
-    "flow-copy-source": "^1.2.0",
-    "husky": "^0.13.3",
+    "flow-copy-source": "1.2.0",
+    "husky": "0.13.3",
     "jsdom": "7.2.2",
-    "lint-staged": "^3.4.2",
-    "lodash": "^4.17.2",
-    "mocha": "^3.3.0",
-    "postcss-cli": "^3.2.0",
-    "postcss-css-variables": "^0.7.0",
-    "postcss-import": "^9.1.0",
-    "postcss-loader": "^1.3.3",
-    "prettier": "^1.5.2",
-    "prop-types": "^15.5.8",
-    "proxyquire": "^1.7.11",
-    "qs": "^5.2.1",
-    "react": "^15.4.1",
-    "react-addons-css-transition-group": "^15.4.1",
-    "react-addons-test-utils": "^15.5.1",
-    "react-dom": "^15.4.1",
-    "react-hotkeys": "^0.9.0",
-    "react-intl": "^2.1.5",
-    "react-pure-render": "^1.0.2",
-    "react-storybook-addon-add-stories-group": "^0.1.0",
-    "react-styleguidist": "^5.2.0",
-    "rimraf": "^2.6.1",
-    "style-loader": "^0.16.1",
-    "webpack": "^2.5.1"
+    "lint-staged": "3.4.2",
+    "lodash": "4.17.2",
+    "mocha": "3.3.0",
+    "postcss-cli": "3.2.0",
+    "postcss-css-variables": "0.7.0",
+    "postcss-import": "9.1.0",
+    "postcss-loader": "1.3.3",
+    "prettier": "1.6.1",
+    "prop-types": "15.5.8",
+    "proxyquire": "1.7.11",
+    "qs": "5.2.1",
+    "react": "15.4.1",
+    "react-addons-css-transition-group": "15.4.1",
+    "react-addons-test-utils": "15.5.1",
+    "react-dom": "15.4.1",
+    "react-hotkeys": "0.9.0",
+    "react-intl": "2.1.5",
+    "react-pure-render": "1.0.2",
+    "react-storybook-addon-add-stories-group": "0.1.0",
+    "react-styleguidist": "5.2.0",
+    "rimraf": "2.6.1",
+    "style-loader": "0.16.1",
+    "webpack": "2.5.1"
   },
   "peerDependencies": {
-    "classnames": "^2.2.5",
-    "lodash": "^4.17.2",
-    "prop-types": "^15.5.8",
-    "qs": "^5.2.1",
-    "react": "^15.4.1",
-    "react-addons-css-transition-group": "^15.4.1",
-    "react-dom": "^15.4.1",
-    "react-hotkeys": "^0.9.0",
-    "react-intl": "^2.1.5",
-    "react-pure-render": "^1.0.2"
+    "classnames": "2.2.5",
+    "lodash": "4.17.2",
+    "prop-types": "15.5.8",
+    "qs": "5.2.1",
+    "react": "15.4.1",
+    "react-addons-css-transition-group": "15.4.1",
+    "react-dom": "15.4.1",
+    "react-hotkeys": "0.9.0",
+    "react-intl": "2.1.5",
+    "react-pure-render": "1.0.2"
   },
   "babel": {
     "presets": ["es2015", "stage-2", "react"],
