Add code coverage to ui

--- a/circle.yml
+++ b/circle.yml
@@ -17,3 +17,4 @@ test:
     - npm run lint
     - npm run typecheck
     - npm run test -- --coverage
+    - bash <(curl -s https://codecov.io/bash)
