--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "postcss-import": "9.1.0",
     "postcss-loader": "1.3.3",
     "prettier": "1.6.1",
-    "prop-types": "15.5.8",
+    "prop-types": "15.5.10",
     "qs": "5.2.1",
     "react": "15.4.1",
     "react-addons-css-transition-group": "15.4.1",
@@ -90,16 +90,16 @@
     "webpack": "2.5.1"
   },
   "peerDependencies": {
-    "classnames": "2.2.5",
-    "lodash": "4.17.2",
-    "prop-types": "15.5.8",
-    "qs": "5.2.1",
-    "react": "15.4.1",
-    "react-addons-css-transition-group": "15.4.1",
-    "react-dom": "15.4.1",
-    "react-hotkeys": "0.9.0",
-    "react-intl": "2.1.5",
-    "react-pure-render": "1.0.2"
+    "classnames": "^2.2.5",
+    "lodash": "^4.17.2",
+    "prop-types": "^15.5.10",
+    "qs": "^5.2.1",
+    "react": "^15.4.1",
+    "react-addons-css-transition-group": "^15.4.1",
+    "react-dom": "^15.4.1",
+    "react-hotkeys": "^0.9.0",
+    "react-intl": "^2.1.5",
+    "react-pure-render": "^1.0.2"
   },
   "babel": {
     "presets": ["es2015", "stage-2", "react"],
