--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "url": "https://github.com/kalohq/ui"
   },
   "main": "lib/index.js",
+  "files": [
+    "lib"
+  ],
   "scripts": {
     "start": "npm run storybook:start",
     "storybook": "npm run storybook:start",
@@ -18,7 +21,7 @@
       "./node_modules/.bin/babel src/components --out-dir lib --copy-files --ignore __tests__,__stories__ && npm run copy-flow",
     "compile": "npm run compile:js && npm run compile:css",
     "test": "jest",
-    "dist": "rimraf lib && npm run compile && cp {package.json,README.md} lib",
+    "dist": "rimraf lib && npm run compile",
     "copy-flow":
       "flow-copy-source src/components lib --ignore '{index.js,**/__tests__/*,**/__stories__/*}'",
     "typecheck": "flow",
