--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kalo/ui",
-  "version": "0.4.2",
+  "version": "0.4.3",
   "description": "A library of React components",
   "repository": {
     "type": "git",
@@ -15,21 +15,20 @@
     "storybook": "npm run storybook:start",
     "storybook:start": "start-storybook -p 6006",
     "storybook:build": "build-storybook -c .storybook -o docs",
-    "compile:css":
-      "./node_modules/.bin/postcss -r -d lib/**/*.css -c postcss.config.js",
-    "compile:js":
-      "./node_modules/.bin/babel src/components --out-dir lib --copy-files --ignore __tests__,__stories__ && npm run copy-flow",
+    "compile:css": "./node_modules/.bin/postcss -r -d lib/**/*.css -c postcss.config.js",
+    "compile:js": "./node_modules/.bin/babel src/components --out-dir lib --copy-files --ignore __tests__,__stories__ && npm run copy-flow",
     "compile": "npm run compile:js && npm run compile:css",
     "test": "jest",
     "dist": "rimraf lib && npm run compile",
-    "copy-flow":
-      "flow-copy-source src/components lib --ignore '{index.js,**/__tests__/*,**/__stories__/*}'",
+    "copy-flow": "flow-copy-source src/components lib --ignore '{index.js,**/__tests__/*,**/__stories__/*}'",
     "typecheck": "flow",
     "lint": "eslint src",
     "precommit": "lint-staged"
   },
   "lint-staged": {
-    "*.js": ["eslint"]
+    "*.js": [
+      "eslint"
+    ]
   },
   "author": "The Kalo Team",
   "license": "ISC",
@@ -105,17 +104,27 @@
     "react-pure-render": "^1.0.2"
   },
   "babel": {
-    "presets": ["es2015", "stage-2", "react"],
-    "ignore": ["__stories__"]
+    "presets": [
+      "es2015",
+      "stage-2",
+      "react"
+    ],
+    "ignore": [
+      "__stories__"
+    ]
   },
   "jest": {
-    "modulePaths": ["src/core", "src"],
+    "modulePaths": [
+      "src/core",
+      "src"
+    ],
     "moduleNameMapper": {
-      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga|html)$":
-        "<rootDir>/__mocks__/file-mock.js",
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga|html)$": "<rootDir>/__mocks__/file-mock.js",
       "\\.(css|less)$": "identity-obj-proxy"
     },
-    "testMatch": ["**/__tests__/**/?(*.)(spec|test).js?(x)"],
+    "testMatch": [
+      "**/__tests__/**/?(*.)(spec|test).js?(x)"
+    ],
     "coverageDirectory": "./coverage/unit",
     "collectCoverage": false,
     "collectCoverageFrom": [
