--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
     "storybook": "npm run storybook:start",
     "storybook:start": "start-storybook -p 6006",
     "storybook:build": "build-storybook -c .storybook -o docs",
-    "compile:css": "./node_modules/.bin/postcss -r -d lib/**/*.css -c postcss.config.js",
-    "compile:js": "./node_modules/.bin/babel src/components --out-dir lib --copy-files --ignore __tests__,__stories__ && npm run copy-flow",
-    "compile": "npm run compile:js && npm run compile:css",
+    "compile": "./node_modules/.bin/gulp build-production",
     "test": "jest",
     "dist": "rimraf lib && npm run compile",
     "copy-flow": "flow-copy-source src/components lib --ignore '{index.js,**/__tests__/*,**/__stories__/*}'",
@@ -63,10 +61,12 @@
     "eslint-plugin-prettier": "2.0.1",
     "eslint-plugin-react": "7.0.0",
     "extract-text-webpack-plugin": "2.1.0",
-    "react-addons-test-utils": "15.4.1",
     "file-loader": "0.11.1",
     "flow-bin": "0.53.0",
     "flow-copy-source": "1.2.0",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^7.0.0",
+    "gulp-postcss": "^7.0.0",
     "husky": "0.13.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "21.0.0",
@@ -74,6 +74,7 @@
     "lodash": "4.17.2",
     "postcss-cli": "3.2.0",
     "postcss-css-variables": "0.7.0",
+    "postcss-cssnext": "^3.0.2",
     "postcss-import": "9.1.0",
     "postcss-loader": "1.3.3",
     "prettier": "1.6.1",
@@ -81,6 +82,7 @@
     "qs": "5.2.1",
     "react": "15.4.1",
     "react-addons-css-transition-group": "15.4.1",
+    "react-addons-test-utils": "15.4.1",
     "react-dom": "15.4.1",
     "react-hotkeys": "0.9.0",
     "react-intl": "2.1.5",
