--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "storybook": "npm run storybook:start",
     "storybook:start": "start-storybook -p 6006",
     "storybook:build": "build-storybook -c .storybook -o docs",
-    "compile": "./node_modules/.bin/gulp build-production",
+    "compile": "gulp build-production",
     "test": "jest",
     "dist": "rimraf lib && npm run compile",
     "copy-flow": "flow-copy-source src/components lib --ignore '{index.js,**/__tests__/*,**/__stories__/*}'",
