--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "copy-flow": "flow-copy-source src/components lib --ignore '{index.js,**/__tests__/*,**/__stories__/*}'",
     "typecheck": "flow",
     "lint": "eslint src",
-    "precommit": "lint-staged"
+    "precommit": "lint-staged",
+    "docs:dev": "node docs/server.js",
+    "docs:build": "next build docs",
+    "docs:start": "next start docs"
   },
   "lint-staged": {
     "*.js": [
@@ -44,6 +47,7 @@
     "babel-loader": "7.0.0",
     "babel-plugin-lodash": "3.2.11",
     "babel-plugin-react-transform": "2.0.2",
+    "babel-plugin-styled-components": "^1.3.0",
     "babel-plugin-transform-builtin-extend": "1.1.0",
     "babel-plugin-transform-runtime": "6.23.0",
     "babel-preset-es2015": "6.24.1",
@@ -60,6 +64,7 @@
     "eslint-plugin-jsx-a11y": "5.0.1",
     "eslint-plugin-prettier": "2.0.1",
     "eslint-plugin-react": "7.0.0",
+    "express": "^4.16.2",
     "extract-text-webpack-plugin": "2.1.0",
     "file-loader": "0.11.1",
     "flow-bin": "0.53.0",
@@ -72,6 +77,7 @@
     "jest": "21.0.0",
     "lint-staged": "3.4.2",
     "lodash": "4.17.2",
+    "next": "3.2.2",
     "postcss-cli": "3.2.0",
     "postcss-css-variables": "0.7.0",
     "postcss-cssnext": "^3.0.2",
@@ -91,6 +97,7 @@
     "react-styleguidist": "5.2.0",
     "rimraf": "2.6.1",
     "style-loader": "0.16.1",
+    "styled-components": "^2.2.3",
     "webpack": "2.5.1"
   },
   "peerDependencies": {
@@ -134,5 +141,8 @@
       "!src/**/*.test.js",
       "!src/**/*.stories.js"
     ]
+  },
+  "dependencies": {
+    "next-routes": "^1.1.0"
   }
 }
