Continue building out docs

--- a/docs/.babelrc
+++ b/docs/.babelrc
@@ -10,8 +10,9 @@
       {
         "root": ["./"],
         "alias": {
-          "components": "docs/components",
-          "layouts": "docs/layouts"
+          "components": "./docs/components",
+          "layouts": "./docs/layouts",
+          "content": "./docs/content"
         }
       }
     ]
