--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "precommit": "lint-staged",
     "docs:dev": "node docs/server.js",
     "docs:build": "next build docs",
-    "docs:start": "next start docs"
+    "docs:start": "next start docs",
+    "docs:generate": "react-docgen src/components/button/button.js --out docs/content/component-props.json --ignore [__tests__,__stories__]"
   },
   "lint-staged": {
     "*.js": [
@@ -71,12 +72,15 @@
     "flow-copy-source": "1.2.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^7.0.0",
+    "gulp-markdown-to-json": "^1.0.3",
     "gulp-postcss": "^7.0.0",
+    "gulp-util": "^3.0.8",
     "husky": "0.13.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "21.0.0",
     "lint-staged": "3.4.2",
     "lodash": "4.17.2",
+    "marked": "^0.3.6",
     "next": "3.2.2",
     "postcss-cli": "3.2.0",
     "postcss-css-variables": "0.7.0",
@@ -84,11 +88,13 @@
     "postcss-import": "9.1.0",
     "postcss-loader": "1.3.3",
     "prettier": "1.6.1",
+    "processmd": "^3.1.6",
     "prop-types": "15.5.10",
     "qs": "5.2.1",
     "react": "15.4.1",
     "react-addons-css-transition-group": "15.4.1",
     "react-addons-test-utils": "15.4.1",
+    "react-docgen": "^2.19.0",
     "react-dom": "15.4.1",
     "react-hotkeys": "0.9.0",
     "react-intl": "2.1.5",
