--- a/site/.babelrc
+++ b/site/.babelrc
@@ -1,9 +1,9 @@
 {
-  "extends": "../.babelrc",
   "presets": [
-    "next/babel",
+    "next/babel"
   ],
   "plugins": [
+    "lodash",
     ["styled-components", { "ssr": true, "displayName": true, "preprocess": false } ],
     ["markdown-in-js/babel"],
     ["babel-plugin-transform-flow-strip-types"],
