--- a/site/package.json
+++ b/site/package.json
@@ -21,9 +21,6 @@
     "babel-plugin-lodash": "^3.2.11",
     "babel-plugin-react-transform": "^3.0.0",
     "babel-plugin-styled-components": "^1.3.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^0.28.7",
     "eslint": "^4.10.0",
     "express": "^4.16.2",
@@ -35,6 +32,7 @@
     "next-routes": "^1.1.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-pure-render": "^1.0.2",
     "styled-components": "^2.2.3",
     "webpack": "^3.8.1"
   }
