Build tokens using Theo rather than GulpTheo

--- a/config/design-tokens/color.yml
+++ b/config/design-tokens/color.yml
@@ -2,75 +2,75 @@ global:
   type: color
   category: colors
 props:
-  pink300:
+  PINK300:
     value: '#FBDFE2'
-  pink400:
+  PINK400:
     value: '#FDB3C8'
-  pink500:
+  PINK500:
     value: '#EA5F6E'
-  pink600:
+  PINK600:
     value: '#E05867'
-  pink700:
+  PINK700:
     value: '#C34A57'
-  orange300:
+  ORANGE300:
     value: '#FFEDB4'
-  orange400:
+  ORANGE400:
     value: '#FFCE5E'
-  orange500:
+  ORANGE500:
     value: '#FDB81C'
-  orange600:
+  ORANGE600:
     value: '#F6AF0D'
-  orange700:
+  ORANGE700:
     value: '#D89118'
-  purple300:
+  PURPLE300:
     value: '#e8e2f2'
-  purple400:
+  PURPLE400:
     value: '#9F81DA'
-  purple500:
+  PURPLE500:
     value: '#8A70BD'
-  purple600:
+  PURPLE600:
     value: '#775FA8'
-  purple700:
+  PURPLE700:
     value: '#604e83'
-  green300:
+  GREEN300:
     value: '#D8F0E8'
-  green400:
+  GREEN400:
     value: '#4FD2A4'
-  green500:
+  GREEN500:
     value: '#3eb38a'
-  green600:
+  GREEN600:
     value: '#38A07C'
-  green700:
+  GREEN700:
     value: '#298665'
-  blue300:
+  BLUE300:
     value: '#C1F4FF'
-  blue400:
+  BLUE400:
     value: '#65D2EA'
-  blue500:
+  BLUE500:
     value: '#54C3DB'
-  blue600:
+  BLUE600:
     value: '#4DB8CF'
-  blue700:
+  BLUE700:
     value: '#2BA7C2'
-  navy300:
+  NAVY300:
     value: '#F9FAFC'
-  navy400:
+  NAVY400:
     value: '#C6C7D8'
-  navy500:
+  NAVY500:
     value: '#93A6C1'
-  navy600:
+  NAVY600:
     value: '#546789'
-  navy700:
+  NAVY700:
     value: '#374561'
-  grey200:
+  GREY200:
     value: '#F9FAFC'
-  grey300:
+  GREY300:
     value: '#EEF4FA'
-  grey400:
+  GREY400:
     value: '#D0D8DF'
-  grey500:
+  GREY500:
     value: '#B0BAC3'
-  grey600:
+  GREY600:
     value: '#89929B'
-  grey700:
+  GREY700:
     value: '#707D8A'
