Fix missing tokens

--- a/config/design-tokens/color.yml
+++ b/config/design-tokens/color.yml
@@ -2,6 +2,10 @@ global:
   type: color
   category: colors
 props:
+  WHITE:
+    value: '#fff'
+  BLACK:
+    value: '#000'
   PINK300:
     value: '#FBDFE2'
   PINK400:
