First pass at new layout components

--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,15 @@
 {
   "plugins": [
+    ["emotion", {
+      "sourceMap": true
+    }],
     "lodash",
     ["transform-runtime", {
       "polyfill": false,
       "regenerator": true
     }],
     ["babel-plugin-transform-builtin-extend", {
-      globals: ["Error"],
+      "globals": ["Error"],
     }]
   ],
   "presets": [
@@ -20,7 +23,7 @@
           "regenerator": true
         }],
         ["babel-plugin-transform-builtin-extend", {
-          globals: ["Error"],
+          "globals": ["Error"],
         }],
         "babel-plugin-transform-es2015-modules-commonjs"
       ]
