Update snapshot testing

--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "husky": "0.13.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "21.0.0",
-    "jest-glamor-react": "^3.2.2",
+    "jest-glamor-react": "3.0.0",
     "lint-staged": "3.4.2",
     "lodash": "4.17.2",
     "postcss-cli": "3.2.0",
@@ -97,6 +97,7 @@
     "react-pure-render": "1.0.2",
     "react-storybook-addon-add-stories-group": "0.1.0",
     "react-styleguidist": "5.2.0",
+    "react-test-renderer": "15.4.1",
     "rimraf": "2.6.1",
     "style-loader": "0.16.1",
     "styled-system": "^1.0.8",
